# SmartEd-Support-Chatbot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: lms-copilot-architecture.mdc
ai_engine/: README.md  pyproject.toml
ai_engine/smarted_ai_engine/: __init__.py  chroma_store.py  ingestion.py
backend/: dev.db  mock_student.json  requirements.txt
backend/app/: bootstrap.py  config.py  database.py  deps.py  env_bootstrap.py  main.py  models.py  paths.py  rate_limit.py  schemas.py  security.py
backend/flows/: account_settings.json  password_reset.json  payment_failed.json  profile_update.json  upload_documents.json
backend/scripts/: ensure_placeholder_pngs.py  test_indexer.py
backend/support-assets/: README.md
backend/tests/: test_context_sanitizer.py  test_query_context_resolver.py
backend/vector_db/: support_flow_index.json
docker/: Dockerfile.backend  Dockerfile.web  nginx.conf
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  GITHUB_BACKUP.md  LMS_COPILOT_ARCHITECTURE.md  README.md  STABLE_CHECKPOINT.md  WORKING_STATE.md  database-schema.md
docs/sample_kb/: product_guide.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
mock-data/: README.md
mock-data/announcements/: default.json
scripts/: docker-compose.js  restart-api.ps1  start-dev.bat  start-docker.bat
vector_db/: README.md
(+109 files in other folders)
